syntax = "proto3";
package datadog.test.v1;

option go_package = "/connectionserver"; // golang

message Connection {
    bytes data = 1;
}

message GetConnectionsRequest {
    string clientID = 1;
    string unixSockPath = 2;
}

service SystemProbe {
    rpc GetConnections(GetConnectionsRequest) returns (stream Connection);
}
